--- a/Files/index.html
+++ b/Files/index.html
@@ -6,11 +6,13 @@
     <title>Web Dev</title>
     <link rel="stylesheet" href="../bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../fontawesome-free-5.15.3-web/js/all.min.js">
+    <link rel="stylesheet" href="../Files/syle.css">
     <link rel="icon" href="../logos/mainlogo.png">
 </head>
 <body>
     
     <!-- navbar -->
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-info">
         <a class="navbar-brand" href="#">
             <img src="../logos/mainlogo.png" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -48,7 +50,42 @@
       </nav>
 
     <!-- navbar -->
+    
 
+    <!-- carousel -->
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100 fit" src="../logos/nodejslogo.png" alt="First slide">
+          </div>
+          <div class="carousel-item ">
+            <img class="d-block w-100 fit" src="../logos/angularlogo.png" alt="Second slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 fit" src="../logos/html.png" alt="Third slide">
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100 fit" src="../logos/reactlogo.png" alt="Third slide">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+
+      <!-- carousel -->
 
   <script src="../jquery-3.6.0.min.js"></script>  
   <script src="../bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
