The comment were aded

--- a/Files/index.html
+++ b/Files/index.html
@@ -144,6 +144,51 @@
 
       <!-- card -->
 
+    </div>
+
+
+    <h2 class="display-4 text-center py-5 my-4">Meet the Speakers</h2>
+    <nav class="nav justify-content-center nav-pills flex-column flex-md-row">
+
+      <a href="#ninja" class="nav-link active" data-toggle="tab">The Net ninja</a>
+      <a href="#wizard" class="nav-link"data-toggle="tab">The web wizard</a>
+      <a href="#captain" class="nav-link"data-toggle="tab">captain code</a>
+      <a href="#avengers" class="nav-link"data-toggle="tab">Anguler avangers</a>
+
+
+    </nav>
+
+    <div class="tab-content py-5">
+
+      <div class="tab-pane active" id="ninja">
+      <h3>Net ninja</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus nesciunt assumenda eligendi officiis sequi voluptate quae ratione, cum nihil.</p>
+
+      </div>
+
+      <div class="tab-pane" id="wizard">
+        <h3>The web wizard</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus nesciunt assumenda eligendi officiis sequi voluptate quae ratione, cum nihil.</p>
+
+        </div>
+
+        <div class="tab-pane" id="captain">
+          <h3>captain code</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus nesciunt assumenda eligendi officiis sequi voluptate quae ratione, cum nihil.</p>
+
+          </div>
+
+          <div class="tab-pane" id="avengers">
+            <h3>Anguler avangers</a>
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus nesciunt assumenda eligendi officiis sequi voluptate quae ratione, cum nihil.</p>
+
+            </div>
+
+
+
+      
+
   <script src="../jquery-3.6.0.min.js"></script>  
   <script src="../bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
 </body>
